--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   sliding_up_panel: ^2.0.0+1
   salomon_bottom_bar: ^3.3.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
